# GitWit

./: README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  add-cli-alias-to-path.sh  devcontainer.json
.github/workflows/: ci.yml
src/: cli.py
src/cli/: cli.py
src/commands/: TODO_comment_tag_assessment.py  TODO_most_active_areas.py  comment_tag_staleness.py  first_timers.py  latest_examples_of.py  repo_hot_zones.py  risky_commits.py  show_activity.py  team_activity.py  who_is_the_expert.py
src/git/: __init__.py  cmd.py
src/gitwit/: __main__.py
src/gitwit/cli/: cli.py
src/gitwit/commands/: latest_examples_of.py  repo_hot_zones.py  risky_commits.py  show_activity.py  team_activity.py  who_is_the_expert.py
src/gitwit/decorators/: since_until_options.py
src/gitwit/models/: blame_line.py  git_log_entry.py
src/gitwit/utils/: console_singleton.py  date_utils.py  fetch_git_log_entries.py  git_helpers.py  human_readable_helpers.py  repo_singleton.py  typer_helpers.py
src/models/: blame_line.py
src/rich/: __init__.py  console.py  progress.py  table.py
src/typer/: __init__.py
src/utils/: date_utils.py  fetch_commits.py  fetch_git_blame.py  fetch_git_log_entries.py  fetch_tracked_git_file_paths.py  git_helpers.py  repo_helpers.py
tests/: test_show_activity.py
tests/commands/: test_latest_example_of.py  test_repo_hot_zones.py  test_risky_commits.py  test_show_activity.py  test_team_activity.py  test_who_is_the_expert.py
tests/mock_generators/: commit_generator.py  repo_generator.py
tests/utils/: commit_generator.py  test_commit_generator.py  test_date_utils.py  test_fetch_git_log_entries.py  test_fetch_tracked_git_file_paths.py  test_git_helpers.py  test_human_readable_helpers.py  test_typer_helpers.py
