# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitwit"
version = "0.2.0"
description = "A CLI for showing activity, experts, etc.. based on git data."
readme = "README.md"
authors = [
  { name = "Jack Francis Dalton", email = "gitwit@jackfrancisdalton.com" }
]
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.9.0",
  "GitPython>=3.1.31",
  "rich>=13.5.2"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Typer",
]

# console_scripts entry point
[project.scripts]
gitwit = "gitwit.cli:app"

# dev-requirements (extras)
[project.optional-dependencies]
dev = [
  "pytest>=7.3.1",
  "pytest-mock>=3.10.0",
]

# (Optional) if you want pytest to auto-add src/ to PYTHONPATH:
[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gitwit*"]
