# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitwit"
version = "0.2.0"
description = "CLI tool to extract information from a git repository to make informed decisions"
readme = "README.md"
authors = [
  { name = "Jack Francis Dalton", email = "gitwit@jackfrancisdalton.com" }
]
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.9.0",
  "GitPython>=3.1.31",
  "rich>=13.5.2"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Typer",
]

[project.scripts]
gitwit = "gitwit.cli.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.3.1",
  "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gitwit*"]
